--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 body {
-    background-image: url('background.jpg');
+    background-image: url('new_background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
